add endpoint to get all channels
