# app/types/strategy.types.go
@@ -1,8 +1,58 @@
 package types
 
-import "github.com/gibigo/cornix-tv-channel/app/dal"
+type Strategy struct {
+	ID               uint
+	AllowCounter     bool
+	Coin             string
+	IsTargetStrategy bool
+	TargetStrategy   *TargetStrategy
+	IsZoneStrategy   bool
+	ZoneStrategy     *ZoneStrategy
+	UserID           uint
+	ChannelID        uint
+}
+
+type ZoneStrategy struct {
+	ID         uint
+	EntryStart float64
+	EntryStop  float64
+	TPs        []*TP
+	SL         *SL
+	IsBreakout bool
+	StrategyID uint
+}
+
+type TargetStrategy struct {
+	ID         uint
+	Entries    []*Entry
+	TPs        []*TP
+	SL         *SL
+	IsBreakout bool
+	StrategyID uint
+}
 
 type Entry struct {
+	ID               uint
+	Diff             float64
+	TargetStrategyID uint
+	ZoneStrategyID   uint `json:",omitempty"`
+}
+
+type TP struct {
+	ID               uint
+	Diff             float64
+	TargetStrategyID uint
+	ZoneStrategyID   uint
+}
+
+type SL struct {
+	ID               uint
+	Diff             float64
+	TargetStrategyID uint
+	ZoneStrategyID   uint
+}
+
+/* type Entry struct {
 	Diff       float32 `json:"diff"`
 	StrategyID int64   `json:",omitempty"` // maybe remove this
 }
@@ -24,10 +74,10 @@ type Strategy struct {
 	TPs          []*TP    `json:"tps"`
 	SL           *SL      `json:"sl"`
 }
-
+*/
 type AddStrategy struct {
-	AllowCounter bool         `json:"allowCounter"`
-	Entries      []*dal.Entry `json:"entires"`
-	TPs          []*dal.TP    `json:"tps"`
-	SL           *dal.SL      `json:"sl"`
+	AllowCounter bool     `json:"allowCounter"`
+	Entries      []*Entry `json:"entires"`
+	TPs          []*TP    `json:"tps"`
+	SL           *SL      `json:"sl"`
 }
