# docs/swagger.json
@@ -12,6 +12,98 @@
     "host": "https://yourforwarder.io",
     "basePath": "/api/v1",
     "paths": {
+        "/channels": {
+            "get": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
+                "description": "Get all channels of the current user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "channels"
+                ],
+                "summary": "Get all channels",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/types.Channel"
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/utils.HTTPError"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
+                "description": "Create a new channel",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "channels"
+                ],
+                "summary": "Create a channel",
+                "parameters": [
+                    {
+                        "description": "User to create",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/types.AddUser"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "409": {
+                        "description": "Conflict",
+                        "schema": {
+                            "$ref": "#/definitions/utils.HTTPError"
+                        }
+                    }
+                }
+            }
+        },
         "/strategies": {
             "post": {
                 "security": [
@@ -150,6 +242,9 @@
                 "consumes": [
                     "application/json"
                 ],
+                "produces": [
+                    "application/json"
+                ],
                 "tags": [
                     "users"
                 ],
@@ -233,57 +328,6 @@
         }
     },
     "definitions": {
-        "dal.Entry": {
-            "type": "object",
-            "required": [
-                "diff"
-            ],
-            "properties": {
-                "diff": {
-                    "type": "number"
-                },
-                "targetStrategyID": {
-                    "type": "integer"
-                },
-                "zoneStrategyID": {
-                    "type": "integer"
-                }
-            }
-        },
-        "dal.SL": {
-            "type": "object",
-            "required": [
-                "diff"
-            ],
-            "properties": {
-                "diff": {
-                    "type": "number"
-                },
-                "targetStrategyID": {
-                    "type": "integer"
-                },
-                "zoneStrategyID": {
-                    "type": "integer"
-                }
-            }
-        },
-        "dal.TP": {
-            "type": "object",
-            "required": [
-                "diff"
-            ],
-            "properties": {
-                "diff": {
-                    "type": "number"
-                },
-                "targetStrategyID": {
-                    "type": "integer"
-                },
-                "zoneStrategyID": {
-                    "type": "integer"
-                }
-            }
-        },
         "types.AddStrategy": {
             "type": "object",
             "properties": {
@@ -293,16 +337,16 @@
                 "entires": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/dal.Entry"
+                        "$ref": "#/definitions/types.Entry"
                     }
                 },
                 "sl": {
-                    "$ref": "#/definitions/dal.SL"
+                    "$ref": "#/definitions/types.SL"
                 },
                 "tps": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/dal.TP"
+                        "$ref": "#/definitions/types.TP"
                     }
                 }
             }
@@ -322,14 +366,36 @@
                 }
             }
         },
+        "types.Channel": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "strategies": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/types.Strategy"
+                    }
+                },
+                "telegramId": {
+                    "type": "integer"
+                }
+            }
+        },
         "types.Entry": {
             "type": "object",
             "properties": {
                 "diff": {
                     "type": "number"
                 },
-                "strategyID": {
-                    "description": "maybe remove this",
+                "id": {
+                    "type": "integer"
+                },
+                "targetStrategyID": {
+                    "type": "integer"
+                },
+                "zoneStrategyID": {
                     "type": "integer"
                 }
             }
@@ -340,7 +406,13 @@
                 "diff": {
                     "type": "number"
                 },
-                "strategyID": {
+                "id": {
+                    "type": "integer"
+                },
+                "targetStrategyID": {
+                    "type": "integer"
+                },
+                "zoneStrategyID": {
                     "type": "integer"
                 }
             }
@@ -351,23 +423,29 @@
                 "allowCounter": {
                     "type": "boolean"
                 },
-                "entires": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/types.Entry"
-                    }
+                "channelID": {
+                    "type": "integer"
+                },
+                "coin": {
+                    "type": "string"
                 },
                 "id": {
                     "type": "integer"
                 },
-                "sl": {
-                    "$ref": "#/definitions/types.SL"
+                "isTargetStrategy": {
+                    "type": "boolean"
                 },
-                "tps": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/types.TP"
-                    }
+                "isZoneStrategy": {
+                    "type": "boolean"
+                },
+                "targetStrategy": {
+                    "$ref": "#/definitions/types.TargetStrategy"
+                },
+                "userID": {
+                    "type": "integer"
+                },
+                "zoneStrategy": {
+                    "$ref": "#/definitions/types.ZoneStrategy"
                 }
             }
         },
@@ -377,8 +455,72 @@
                 "diff": {
                     "type": "number"
                 },
+                "id": {
+                    "type": "integer"
+                },
+                "targetStrategyID": {
+                    "type": "integer"
+                },
+                "zoneStrategyID": {
+                    "type": "integer"
+                }
+            }
+        },
+        "types.TargetStrategy": {
+            "type": "object",
+            "properties": {
+                "entries": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/types.Entry"
+                    }
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "isBreakout": {
+                    "type": "boolean"
+                },
+                "sl": {
+                    "$ref": "#/definitions/types.SL"
+                },
                 "strategyID": {
                     "type": "integer"
+                },
+                "tps": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/types.TP"
+                    }
+                }
+            }
+        },
+        "types.ZoneStrategy": {
+            "type": "object",
+            "properties": {
+                "entryStart": {
+                    "type": "number"
+                },
+                "entryStop": {
+                    "type": "number"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "isBreakout": {
+                    "type": "boolean"
+                },
+                "sl": {
+                    "$ref": "#/definitions/types.SL"
+                },
+                "strategyID": {
+                    "type": "integer"
+                },
+                "tps": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/types.TP"
+                    }
                 }
             }
         },
